--- a/hc-next/.env.example
+++ b/hc-next/.env.example
@@ -15,9 +15,9 @@
 # https://next-auth.js.org/configuration/options#secret
 AUTH_SECRET=""
 
-# Next Auth Discord Provider
-AUTH_DISCORD_ID=""
-AUTH_DISCORD_SECRET=""
+# Sengrid email magic link Auth
+AUTH_SENDGRID_KEY=""
+AUTH_EMAIL_ADDRESS=""
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
