--- a/hc-next/package.json
+++ b/hc-next/package.json
@@ -25,6 +25,10 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.59.16",
     "@trpc/client": "^11.0.0-rc.446",
