--- a/hc-next/package.json
+++ b/hc-next/package.json
@@ -26,6 +26,7 @@
     "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
