--- a/hc-next/package.json
+++ b/hc-next/package.json
@@ -46,6 +46,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.2",
+    "react-icons": "^5.3.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
