fix: add backend port to the env.js and env.example

--- a/hc-next/.env.example
+++ b/hc-next/.env.example
@@ -14,3 +14,4 @@ AUTH_EMAIL_ADDRESS=""
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
+BACKEND_PORT=5000
