--- a/hc-next/package.json
+++ b/hc-next/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
@@ -46,9 +47,9 @@
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-resizable-panels": "^2.1.6",
     "react-dropzone": "^14.3.2",
     "react-icons": "^5.3.0",
+    "react-resizable-panels": "^2.1.6",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
