--- a/hc-next/.env.example
+++ b/hc-next/.env.example
@@ -15,3 +15,4 @@ AUTH_EMAIL_ADDRESS=""
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
 BACKEND_PORT=5000
+BACKEND_URL="http://localhost:5000"
